# template

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
bufferization/: Dockerfile  buff.py
python-docker-example/: Dockerfile  Dockerfile copy  app.py
volume_data/: new_data.txt
